# furiosa-sdk

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  OWNERS  README.md  bors.toml
python/: .openapi-generator-ignore  Makefile  pyproject.toml
python/furiosa-cli/: Makefile  README.md  pyproject.toml  setup.cfg  setup.py
python/furiosa-cli/furiosa/cli/: __init__.py  main.py  utils.py
python/furiosa-cli/tests/: test_commands.py
python/furiosa-common/: README.md  pyproject.toml  setup.cfg  setup.py
python/furiosa-common/furiosa/common/: __init__.py  error.py  native.py  thread.py  utils.py
python/furiosa-common/tests/unit/: conftest.py  test_file_transport.py  test_http_transport.py  test_s3_transport.py
python/furiosa-device/: Makefile  README.md  pyproject.toml
python/furiosa-device/furiosa/device/: __init__.py  sync.py
python/furiosa-device/tests/: test_async.py  test_sync.py
python/furiosa-litmus/: Makefile  README.md  pyproject.toml  setup.cfg  setup.py
python/furiosa-litmus/furiosa/litmus/: __init__.py  reporter.py
python/furiosa-litmus/tests/: conftest.py  test_litmus.py
python/furiosa-model-validator/: Makefile  setup.cfg  setup.py
python/furiosa-model-validator/furiosa/validator/: __init__.py
python/furiosa-models/: Makefile  README.md  pyproject.toml  setup.cfg  setup.py
python/furiosa-models/furiosa/models/: __init__.py
python/furiosa-models/tests/: requirements.txt
python/furiosa-models/tests/integration/: test_vision.py  test_vision_blocking.py  test_vision_nonblocking.py
python/furiosa-optimizer/: .pylintrc  Makefile  README.md  pyproject.toml
python/furiosa-optimizer/furiosa/optimizer/: __init__.py
python/furiosa-optimizer/tests/: conftest.py  test_check_value_info.py  test_opset.py  test_pass.py  test_utils.py  test_version_checker.py
python/furiosa-optimizer/tests/transformer/: conftest.py  test_convert_negative_pads_to_slice.py  test_convert_prelu_to_relu.py  test_fuse_batchnorm.py  test_fuse_gather_matmul.py  test_infer_squeeze_axes.py
python/furiosa-quantizer/: .pylintrc  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
python/furiosa-quantizer/furiosa/quantizer/: __init__.py  calibrator.py  editor.py  processor.py
python/furiosa-quantizer/tests/: __init__.py  test_quantize.py
python/furiosa-registry/: Makefile  README.md  artifact_schema.json  model_schema.json  pyproject.toml  setup.cfg  setup.py
python/furiosa-registry/furiosa/registry/: __init__.py  artifact.py  errors.py  model.py  utils.py
python/furiosa-registry/tests/: conftest.py  requirements.txt  test_code_resolver.py  test_file_transport.py  test_http_transport.py  test_s3_transport.py  test_s3_trasnport.py  test_serial_resolver.py
python/furiosa-registry/tests/fixtures/: artifact.toml  artifact.yaml  artifacts.yaml
python/furiosa-registry/tests/unit/: conftest.py  (+3 more)
python/furiosa-runtime/: Makefile  README.md  pyproject.toml  setup.cfg  setup.py
python/furiosa-runtime/tests/: __init__.py  conftest.py  requirements.txt  test_async_session.py  test_base.py  test_error.py  test_profiler.py  test_session.py  test_tensor.py  test_version.py
python/furiosa-sdk/: .openapi-generator-ignore  .pylintrc  Makefile  README.md  README.rst  output.enf  output.lir  pyproject.toml  requirements.txt  setup.cfg  setup.py
python/furiosa-sdk-cli/: Makefile  pyproject.toml  setup.cfg  setup.py
python/furiosa-sdk-cli/furiosa_sdk_cli/: __init__.py  __main__.py  argparser.py  clidriver.py  commands.py  exceptions.py  http.py  utils.py
python/furiosa-sdk-cli/tests/: __init__.py  tests_commands.py
python/furiosa-sdk-model-validator/: Makefile  setup.cfg  setup.py
python/furiosa-sdk-model-validator/furiosa_sdk_model_validator/: __init__.py
python/furiosa-sdk-quantizer/: Jenkinsfile  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
python/furiosa-sdk-quantizer/docker/: Dockerfile
python/furiosa-sdk-quantizer/examples/: simple_model.onnx  simple_model.py  test.onnx  test.py  test_dynamic_ranges.json
python/furiosa-sdk-quantizer/furiosa_sdk_quantizer/: __init__.py
python/furiosa-sdk-quantizer/scripts/: allowed_models  run_quantizer.py  run_quantizer_all.py
python/furiosa-sdk-quantizer/tests/: __init__.py
python/furiosa-sdk-runtime/: Makefile  pyproject.toml  setup.cfg  setup.py
python/furiosa-sdk-runtime/furiosa_sdk_runtime/: __init__.py  errors.py  extra.yaml  model.py  session.py  tensor.py
python/furiosa-sdk-runtime/tests/: requirements.txt  test_async_session.py  test_base.py  test_mnist_mobinenet_v2.py  test_session.py  test_tensor.py  test_version.py
python/furiosa-sdk/docs/: Makefile  client.rst  conf.py  config.rst  const.rst  furiosa.rst  index.rst  quantizer.rst  runtime.rst  setup.rst  utils.rst
python/furiosa-sdk/furiosa/: __init__.py  config.py  consts.py  git_version  openapi_README.md  quantizer.py  runtime.py  utils.py
python/furiosa-sdk/share/: default.json
python/furiosa-sdk/tests/: compiler_client_integration_tests.py  openapi_integration_tests.py  requirements.txt  test_async_session.py  test_compiler_client_integration_tests.py  test_import.py  test_openapi_integration_tests.py  test_quantizer.py  test_tensor.py  tests_commands.py
python/furiosa-server/: Makefile  README.md  pyproject.toml  setup.cfg  setup.py
python/furiosa-server/openapi/: predict.yaml
python/furiosa-server/proto/: model_repository.proto  predict.proto
python/furiosa-server/samples/: mnist_input_sample_01.json  model_config_example.yaml  server_config_example.yaml
python/furiosa-server/tests/: requirements.txt  test_server.py
python/furiosa-serving/: Makefile  OWNERS  README.md  pyproject.toml  setup.cfg  setup.py
python/furiosa-serving/examples/: image_classify.py  number_classify.py
python/furiosa-serving/tests/: requirements.txt  test_examples.py  test_load_models.py  test_processors.py  test_subapp.py
python/furiosa-tools/: Makefile  README.md  a.dot  pyproject.toml  setup.cfg  setup.py
python/furiosa-tools/tests/: __init__.py  conftest.py  test_compile.py  tests_compile.py
(+670 files in other folders)
