[metadata]
name = furiosa-quantizer
summary = Furiosa SDK Quantizer
author = FuriosaAI Inc.
author_email = pkg@furiosa.ai
url = https://furiosa.ai
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
    NOTICE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
project_urls =
    Documentation=https://docs.furiosa.ai
    Bug Tracker=https://github.com/furiosa-ai/furiosa-sdk/issues
    Source Code=https://github.com/furiosa-ai/furiosa-sdk

[options]
zip_safe = False
python_requires = ~= 3.7, == 3.*
packages = find:
setup_requires =
    gitpython
    setuptools
    wheel

install_requires =
    numpy ~= 1.21.1
    onnx ~= 1.10.2
    onnx-simplifier ~= 0.3.6
    onnxoptimizer ~= 0.2.6
    onnxruntime ~= 1.9.0
    pyyaml ~= 5.4.1
    tqdm ~= 4.61
    # onnxruntime appears to miss specifying some dependencies. Refer to
    # <https://github.com/microsoft/onnxruntime/issues/7527>.
    packaging ~= 21.3
    sympy ~= 1.9.0

    furiosa-common == 0.6.*

[options.package_data]
furiosa.quantizer = py.typed, git_version