[build-system]
requires = [
    "gitpython",
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39']
skip-string-normalization = true

[tool.isort]
profile = 'black'
line_length = 100
force_sort_within_sections = true
