[metadata]
name = furiosa-runtime
summary = Furiosa SDK Runtime
author = FuriosaAI Inc.
author_email = pkg@furiosa.ai
url = https://furiosa.ai
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
    NOTICE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
project_urls =
    Documentation=https://docs.furiosa.ai
    Bug Tracker=https://github.com/furiosa-ai/furiosa-sdk/issues
    Source Code=https://github.com/furiosa-ai/furiosa-sdk

[options]
zip_safe = False
python_requires = ~= 3.7, == 3.*
packages = find:
setup_requires =
    gitpython
    setuptools
    wheel

install_requires =
    furiosa-sdk ~= 0.5.0.dev0
    cffi ~= 1.14
    numpy ~=1.21.1

[options.package_data]
furiosa.runtime =
    git_version
