[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'gitpython',
    'setuptools',
    'wheel',
]

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39']

[tool.isort]
force_sort_within_sections = true
known_first_party = ['furiosa']
line_length = 100
profile = 'black'
