[metadata]
name = furiosa-sdk-quantizer
summary = Furiosa SDK Quantizer
author = FuriosaAI Inc.
author_email = pkg@furiosa.ai
url = https://furiosa.ai
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
    NOTICE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
project_urls =
    Documentation=https://docs.furiosa.ai
    Bug Tracker=https://github.com/furiosa-ai/furiosa-sdk/issues
    Source Code=https://github.com/furiosa-ai/furiosa-sdk

[options]
zip_safe = False
python_requires = ~=3.7, ~=3.8
packages = find:
setup_requires =
    gitpython
    setuptools
    wheel

install_requires =
    coloredlogs==14.0
    future~=0.18.0
    humanfriendly==8.2
    numpy~=1.19.2
    onnx~=1.8.0
    onnxruntime~=1.6.0
    onnxruntime-tools~=1.4.0
    onnx-simplifier==0.2.22
    onnxoptimizer==0.1.2
    packaging==20.4
    protobuf~=3.11.0
    psutil~=5.7.0
    py-cpuinfo~=7.0.0
    py3nvml==0.2.6
    pylint~=2.6.0
    pyparsing==2.4.7
    pyyaml~=5.4.0
    six>=1.15.0
    torch==1.6.0
    torchvision==0.7.0
    tqdm==4.46.0
    typing-extensions==3.7.4.1
    xmltodict==0.12.0

[options.package_data]
furiosa_sdk_quantizer=
    git_version
