[metadata]
name = furiosa-sdk-quantizer
summary = Furiosa SDK Quantizer
author = FuriosaAI Inc.
author_email = pkg@furiosa.ai
url = https://furiosa.ai
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
    NOTICE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
project_urls =
    Documentation=https://docs.furiosa.ai
    Bug Tracker=https://github.com/furiosa-ai/furiosa-sdk/issues
    Source Code=https://github.com/furiosa-ai/furiosa-sdk

[options]
zip_safe = False
python_requires = ~= 3.7, == 3.*
packages = find:
setup_requires =
    gitpython
    setuptools
    wheel

install_requires =
    numpy ~= 1.21.1
    onnx ~= 1.9
    onnx-simplifier ~= 0.3.6
    onnxoptimizer ~= 0.2.6
    onnxruntime ~= 1.7.0
    pyyaml ~= 5.4.1
    torch ~= 1.9.0
    torchvision ~= 0.10.0
    tqdm ~= 4.61

[options.package_data]
furiosa_sdk_quantizer=
    git_version
