[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "furiosa-sdk"
version = "0.8.0"
authors = [{ name = "FurioaAI, Inc.", email = "pkg@furiosa.ai" }]
readme = "README.md"
license = { text = "Apache License 2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["description"]
requires-python = "~=3.7"
dependencies = [
    "furiosa-cli == 0.8.*",
    "furiosa-runtime == 0.8.*",
    "furiosa-tools == 0.8.*",
]

[project.optional-dependencies]
test = []

cli = ["furiosa-cli == 0.8.*"]
litmus = ["furiosa-litmus == 0.8.*"]
quantizer = ["furiosa-quantizer == 0.8.*"]
registry = ["furiosa-registry == 0.8.*"]
server = ["furiosa-server == 0.8.*"]
serving = ["furiosa-serving == 0.8.*"]
tool = ["furiosa-tools == 0.8.*"]

full = [
    "furiosa-cli == 0.8.*",
    "furiosa-litmus == 0.8.*",
    "furiosa-quantizer == 0.8.*",
    "furiosa-registry == 0.8.*",
    "furiosa-server == 0.8.*",
    "furiosa-serving == 0.8.*",
    "furiosa-tools == 0.8.*",
]

[project.urls]
Home = "https://furiosa.ai"
Documentation = "https://furiosa-ai.github.io/docs"
"Bug Tracker" = "https://github.com/furiosa-ai/furiosa-sdk/issues"
"Source Code" = "https://github.com/furiosa-ai/furiosa-sdk"

[tool.flit.module]
name = "furiosa.sdk"
