[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "furiosa-sdk"
version = "0.9.0"
authors = [{ name = "FurioaAI, Inc.", email = "pkg@furiosa.ai" }]
readme = "README.md"
license = { text = "Apache License 2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["description"]
requires-python = "~=3.8"
dependencies = [
    "furiosa-cli == 0.9.*",
    "furiosa-runtime == 0.9.*",
    "furiosa-tools == 0.9.*",
]

[project.optional-dependencies]
test = []

cli = ["furiosa-cli == 0.9.*"]
litmus = ["furiosa-litmus == 0.9.*"]
registry = ["furiosa-registry == 0.9.*"]
quantizer = ["furiosa-optimizer == 0.9.*", "furiosa-quantizer == 0.9.*",]
server = ["furiosa-server == 0.9.*"]
serving = ["furiosa-serving == 0.9.*"]
tool = ["furiosa-tools == 0.9.*"]

full = [
    "furiosa-cli == 0.9.*",
    "furiosa-litmus == 0.9.*",
    "furiosa-registry == 0.9.*",
    "furiosa-optimizer == 0.9.*",
    "furiosa-quantizer == 0.9.*",
    "furiosa-server == 0.9.*",
    "furiosa-serving == 0.9.*",
    "furiosa-tools == 0.9.*",
]

[project.urls]
Home = "https://furiosa.ai"
Documentation = "https://furiosa-ai.github.io/docs"
"Bug Tracker" = "https://github.com/furiosa-ai/furiosa-sdk/issues"
"Source Code" = "https://github.com/furiosa-ai/furiosa-sdk"

[tool.flit.module]
name = "furiosa.sdk"
