[build-system]
# Custom backend from https://gitlab.com/ileixe/flit_ext to use setuptools-scm
# Upstream flit does not support it. See https://github.com/pypa/flit/issues/257
requires = ["flit_ext"]
build-backend = "flit_ext:buildapi"

[project]
name = "furiosa-server"
version = "0.7.0"
authors = [{ name = "FurioaAI, Inc.", email = "pkg@furiosa.ai" }]
readme = "README.md"
license = { text = "Apache License 2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["description"]
requires-python = "~=3.7"
dependencies = [
    "typer",
    "fastapi",
    "mypy-extensions<0.5.0,>=0.4.3",
    "toml",
    "uvicorn",
    "grpcio-tools",
    "furiosa-runtime == 0.7.*",
]

[project.optional-dependencies]
test = [
    "datamodel-code-generator",
    "grpcio-tools",
    "mypy",
    "mypy-protobuf",
    "pytest >=2.7.3",
    "pytest",
    "pytest-asyncio ~= 0.17.2",
    "types-PyYAML",
]

[project.urls]
Home = "https://furiosa.ai"
Documentation = "https://furiosa-ai.github.io/docs"
"Bug Tracker" = "https://github.com/furiosa-ai/furiosa-sdk/issues"
"Source Code" = "https://github.com/furiosa-ai/furiosa-sdk"

[tool.flit.module]
name = "furiosa.server"

[project.scripts]
furiosa-server = "furiosa.server.api.cli:main"

[tool.black]
skip-string-normalization = true
line-length = 100
target-version = ["py37", "py38", "py39"]
extend-exclude = "/generated/"

[tool.isort]
force_sort_within_sections = true
known_first_party = ["furiosa"]
line_length = 100
profile = "black"
extend_skip_glob = ["**/generated/**"]

[tool.pytest.ini_options]
# https://github.com/pytest-dev/pytest-asyncio#auto-mode
asyncio_mode = "auto"

[tool.setuptools_scm]
# https://github.com/pypa/setuptools_scm#configuration-parameters
root = "../.."
write_to = "python/furiosa-server/furiosa/server/git_version.txt"
# SemVer with release branch: https://github.com/pypa/setuptools_scm#version-number-construction
version_scheme = "release-branch-semver"
# Custom local scheme to emit commit hash: https://github.com/ileixe/flit_ext/blob/main/pyproject.toml#L22
local_scheme = "force-local-version"

[tool.flit.sdist]
include = ["furiosa/server/git_version.txt"]
