[metadata]
name = furiosa-server
summary = Furiosa model server
author = FuriosaAI Inc.
author_email = pkg@furiosa.ai
url = https://furiosa.ai
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
project_urls =
    Documentation=https://docs.furiosa.ai
    Bug Tracker=https://github.com/furiosa-ai/furiosa-sdk/issues
    Source Code=https://github.com/furiosa-ai/furiosa-sdk

[options]
python_requires = >= 3.7
setup_requires =
    gitpython
    setuptools
    wheel
install_requires =
    typer
    fastapi
    furiosa-sdk-runtime ~= 0.5.0.dev0
    uvicorn

[options.package_data]
furiosa.server = py.typed, git_version

[mypy]
ignore_missing_imports = True
plugins = pydantic.mypy
